<resources>
    <string name="app_name">Netdata</string>
    <string name="hint_email_address">Email Address</string>
    <string name="label_dummy">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia. Nam pretium turpis et arcu. Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Praesent adipiscing. Phasellus ullamcorper ipsum rutrum nunc. Nunc nonummy metus. Vestibulum volutpat pretium libero. Cras id dui. Aenean ut eros et nisl sagittis vestibulum. Nullam nulla eros, ultricies sit amet, nonummy id, imperdiet feugiat, pede. Sed lectus. Donec mollis hendrerit risus. Phasellus nec sem in justo pellentesque facilisis. Etiam imperdiet imperdiet orci. Nunc nec neque. Phasellus leo dolor, tempus non, auctor et, hendrerit quis, nisi. Curabitur ligula sapien, tincidunt non, euismod vitae, posuere imperdiet, leo. Maecenas malesuada. Praesent congue erat at massa. Sed cursus turpis vitae tortor. Donec posuere vulputate arcu. Phasellus accumsan cursus velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed aliquam, nisi quis porttitor congue, elit erat euismod orci, ac Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia. Nam pretium turpis et arcu. Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Praesent adipiscing. Phasellus ullamcorper ipsum rutrum nunc. Nunc nonummy metus. Vestibulum volutpat pretium libero. Cras id dui. Aenean ut eros et nisl sagittis vestibulum. Nullam nulla eros, ultricies sit amet, nonummy id, imperdiet feugiat, pede. Sed lectus. Donec mollis hendrerit risus. Phasellus nec sem in justo pellentesque facilisis. Etiam imperdiet imperdiet orci. Nunc nec neque. Phasellus leo dolor, tempus non, auctor et, hendrerit quis, nisi. Curabitur ligula sapien, tincidunt non, euismod vitae, posuere imperdiet, leo. Maecenas malesuada. Praesent congue erat at massa. Sed cursus turpis vitae tortor. Donec posuere vulputate arcu. Phasellus accumsan cursus velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed aliquam, nisi quis porttitor congue, elit erat euismod orci, ac  </string>
    <string name="connection_exception">No Internet connection. Please check your Internet connection and try again.</string>
    <string name="socket_time_out_exception">Connection timeout</string>
    <string name="other_exception">Something is wrong here</string>
    <string name="label_welcome_to_netdata_notifications">Welcome to Netdata notifications app!</string>
    <string name="btn_sign_in_with_qr_code">Sign In With QR Code</string>
    <string name="label_or">OR</string>
    <string name="hint_enter_email_address">Enter email address</string>
    <string name="label_enter_your_email">Enter Your Email</string>
    <string name="label_we_ll_send_you_a_link_to_your_email_address">We’ll send you a link to your\nemail address</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="label_scan_qr_code_to_sign_in">Scan QR Code To Sign In</string>
    <string name="label_scan_this_qr_code_to_log_in_instantly">scan this QR code to log in instantly</string>
    <string name="label_day_theme">Day Theme</string>
    <string name="label_from_this_menu_you_can_change_to_light_mode">From this menu you can change to light mode</string>
    <string name="label_night_theme">Night Theme</string>
    <string name="label_from_this_menu_you_can_change_to_dark_mode">From this menu you can change to dark mode</string>
    <string name="btn_done">Done</string>
    <string name="label_choose_a_space_to_continue">Choose A Space To Continue</string>
    <string name="label_you_have_a_total_of_3_notifications_in_your_spaces">You have a total of 0 notifications in your spaces</string>
    <string name="hint_search_services">Search services....</string>
    <string name="hint_search">search</string>
    <string name="label_select_war_rooms">Select War rooms</string>
    <string name="label_close">Close</string>
    <string name="label_sort_by">Sort By</string>
    <string name="label_time">Time</string>
    <string name="label_notification_priority">Notification Priority</string>
    <string name="label_criticality">Criticality</string>
    <string name="title_filters">Filters</string>
    <string name="hint_search_here">Search Here....</string>
    <string name="label_node">Node</string>
    <string name="label_alert_status">Alert Status</string>
    <string name="label_class">Class</string>
    <string name="label_type_amp_component"><![CDATA[Type & Component]]></string>
    <string name="label_all_war_rooms">All War Rooms</string>
    <string name="label_inbound_packets_dropped_ratio">inbound packets dropped ratio</string>
    <string name="label_notification_priority_small">Notification priority</string>
    <string name="label_edit_priority_settings">Edit priority settings</string>
    <string name="label_dot">•</string>
    <string name="label_the_notification_priority_can_be_set_based_on_user_npreferences_to_allow_for_customised_handling_of_nnotifications">The notification priority can be set based on user\npreferences to allow for customised handling of\nnotifications</string>
    <string name="label_low_priority">Low Priority</string>
    <string name="label_medium_priority">Medium Priority</string>
    <string name="label_high_priority">High Priority</string>
    <string name="label_nodes">Nodes</string>
    <string name="label_back">Back</string>
    <string name="label_this_notification_exists_in_the_following_war_rooms">This notification exists in the following War Rooms</string>
    <string name="label_put_under_maintenance_mode_all_your_spaces_or_less_until_you_turn_them_back_on">Put under maintenance mode all your spaces or less until you turn them back on</string>
    <string name="label_disable_notifications_for_all_spaces">Disable notifications for all spaces</string>
    <string name="label_forever">Forever</string>
    <string name="label_until">Until</string>
    <string name="label_disable_notifications_for_each_space_separately">Disable notifications for each space separately</string>
    <string name="label_from_this_menu_you_can_adjust_and_apply_custom_options_per_notification_priority">From this menu you can adjust and apply custom options per notification priority</string>
    <string name="label_sound">Sound</string>
    <string name="btn_apply_custom_tune_from_your_os">Apply custom tune from your OS</string>
    <string name="btn_change_selected_tune">Change selected tune</string>
    <string name="label_banner">Banner</string>
    <string name="label_vibration">Vibration</string>
    <string name="title_delete_account">Delete Account?</string>
    <string name="title_sign_out_question">Sign Out?</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_no">No</string>
    <string name="label_mark_all_as_read">Mark all as read</string>
    <string name="label_warning">Warning</string>
    <string name="title_new_notifications">New Notifications</string>
    <string name="title_maintenance_mode_settings">Maintenance mode settings</string>
    <string name="title_maintenance_mode">Silence Notifications</string>
    <string name="title_notification_priority_settings">Notification priority settings</string>
    <string name="title_notification_priority">Notification Priority</string>
    <string name="title_share_app">Share App</string>
    <string name="title_terms_and_privacy_policy">Terms &amp; Privacy Policy</string>
    <string name="title_change_your_theme">Change Your Theme</string>
    <string name="title_delete_account_settings">Delete Account</string>
    <string name="title_sign_out">Sign Out</string>
    <string name="label_maintenance_mode_settings_description">Silence notifications from your spaces during maintenance windows</string>
    <string name="label_are_you_sure_you_want_to_sign_out">Are you sure you want to sign out?</string>
    <string name="btn_sign_in_with_email_address">Sign In With Email Address</string>
    <string name="title_netdata">Netdata</string>
    <string name="label_where_should_we_navigate_you_to_show_alert_detail">Where should we navigate you to show alert detail?</string>
    <string name="label_webview_in_app">Webview (in-app)</string>
    <string name="label_browser">Browser</string>
</resources>