<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginEnd="@dimen/dp_40"
    android:layout_marginStart="@dimen/dp_40"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/dp_10"
    style="@style/ChangeBackgroundWhiteToBlack1C"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTitleNetdata"
        style="@style/AppTheme.AppTextView.BoldBlack16"
        android:layout_marginTop="@dimen/dp_46"
        android:text="@string/title_netdata"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewLabelAlertText"
        style="@style/AppTheme.AppTextView.RegularBlack14"
        android:layout_width="@dimen/dp_0"
        android:layout_marginTop="@dimen/dp_14"
        android:layout_marginHorizontal="@dimen/dp_35"
        android:textAlignment="center"
        android:lineSpacingExtra="@dimen/dp_10"
        android:text="@string/label_where_should_we_navigate_you_to_show_alert_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitleNetdata" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewLabelWebview"
        style="@style/AppTheme.AppTextView.SemiBoldBlack14"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/label_webview_in_app"
        android:layout_marginBottom="@dimen/dp_29"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewLabelAlertText" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewLabelBrowser"
        style="@style/AppTheme.AppTextView.SemiBoldBlack14"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/label_browser"
        android:layout_marginBottom="@dimen/dp_29"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewLabelWebview"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkboxDontAskAgain"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        style="@style/AppTheme.AppTextView.RegularBlack14"
        android:text="Don't ask again"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewLabelBrowser"/>

</androidx.constraintlayout.widget.ConstraintLayout>